...
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp" />


    <EditText
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:autofillHints="Email"
        android:ems="12"
        android:background="@drawable/search_input_border"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:autofillHints="password"
        android:ems="12"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:background="@drawable/search_input_border"
        android:hint="@string/password" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/LoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="16dp"
        android:text="@string/login"
        android:background="@drawable/general_button" />
...
