<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content">

        <RatingBar
            android:id="@+id/dialog_rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:numStars="5"
            android:progressTint="@color/main"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"
            android:stepSize="1.0" />

        <EditText
            android:id="@+id/dialog_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Type your comment here!"
            android:hint="@string/enter_comment"
            android:padding="8dp"
            android:height="64dp"
            android:background="@drawable/search_input_border"
            android:inputType="textMultiLine" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/general_button"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/post_review" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>