<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:background="@drawable/search_input_border"
    android:padding="8dp">

    <!-- Username on the top left -->
    <TextView
        android:id="@+id/review_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:hint="@string/username"
        android:textColor="@color/main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- RatingBar on the top right -->
    <RatingBar
        android:id="@+id/review_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:progressTint="@color/main"
        android:scaleX="0.5"
        android:scaleY="0.5"
        android:stepSize="1.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/review_username"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Review comment below -->
    <TextView
        android:id="@+id/review_comment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/review_comment"
        app:layout_constraintTop_toBottomOf="@id/review_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <ImageButton
        android:id="@+id/deleteReviewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/secondary"
        android:contentDescription="@string/delete_review"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editReviewButton"
        app:srcCompat="@android:drawable/ic_menu_delete"
        tools:layout_editor_absoluteY="8dp" />

    <ImageButton
        android:id="@+id/editReviewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/secondary"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/edit_review"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit" />


</androidx.constraintlayout.widget.ConstraintLayout>