...
            app:backgroundTint="@color/white"
            app:cornerRadius="8dp"
            app:icon="@drawable/ic_bookmark_outline"
            app:iconGravity="textStart"
            app:iconTint="@color/main"
            app:layout_constraintBottom_toTopOf="@+id/book_description"
            app:layout_constraintEnd_toStartOf="@id/post_review_button"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/book_cover"
            app:layout_constraintTop_toBottomOf="@id/book_rating"
            app:layout_constraintVertical_bias="0.182"
            app:strokeColor="@color/main"
            app:strokeWidth="1dp"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />


        <!-- RecyclerView to display reviews -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reviews_recycler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/reviews_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
...
