...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateAccountButton"/>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ProceedToLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/general_button"
        android:padding="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/proceed_to_login"
...
